fixed sizing on mobile hamburger

--- a/css/styles.css
+++ b/css/styles.css
@@ -837,6 +837,9 @@ img.basic-image {
     #mobile-hamburger {
         cursor: pointer;
         width: 31px;
+        height: 31px;
+        display: block;
+
     }
 
 
